--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,13 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_core_platform_interface: 4.8.0
+  cloud_firestore: ^4.9.3
+  firebase_storage: ^11.2.8
   geolocator: ^10.1.0
   google_maps_flutter: ^2.3.0
   open_street_map_search_and_pick: ^0.1.0
-  gallery_picker: ^0.4.8
+  file_picker: ^5.0.0
 
 dev_dependencies:
   flutter_test:
