--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,10 +38,12 @@ dependencies:
   firebase_core_platform_interface: 4.8.0
   cloud_firestore: ^4.9.3
   firebase_storage: ^11.2.8
-  geolocator: ^10.1.0
+  geolocator: ^9.0.2
   google_maps_flutter: ^2.3.0
   open_street_map_search_and_pick: ^0.1.0
   file_picker: ^5.0.0
+  carousel_slider: ^4.2.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
