--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   file_picker: ^5.0.0
   carousel_slider: ^4.2.1
   url_launcher: ^6.1.11
+  flutter_event_calendar: ^1.0.0
 
 dev_dependencies:
   flutter_test:
