--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -71,4 +71,5 @@ flutter {
 dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
     implementation "com.google.firebase:firebase-bom:32.3.1"
+    implementation 'com.facebook.android:facebook-android-sdk:[8,9)'
 }
