--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,9 +35,10 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core_platform_interface: 4.8.0
+  firebase_core_platform_interface: ^5.0.0
   cloud_firestore: ^4.9.3
   firebase_storage: ^11.2.8
+  firebase_auth: ^4.14.0
   geolocator: ^9.0.2
   google_maps_flutter: ^2.3.0
   open_street_map_search_and_pick: ^0.1.0
@@ -45,6 +46,7 @@ dependencies:
   carousel_slider: ^4.2.1
   url_launcher: ^6.1.11
   flutter_event_calendar: ^1.0.0
+  flutter_facebook_auth: ^5.0.11
 
 dev_dependencies:
   flutter_test:
